fixed bottom info... (maybe?)

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             </div>
         </div>
         <div>
-        <footer style="background-color: rgb(32, 31, 31);" class="fixed-bottom">
+        <footer style="background-color: rgb(32, 31, 31);" class="bg-text3">
             <div class="container-fluid">
                 <div style="color:white;" class="row"> 
                     <div class="col-xl-4 col-lg-4 col-md-4"> Information </div>
