--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
         <script src="code.js"></script>
-        <title> Test </title>
+        <title> inSideSense </title>
     </head>
     <body>
         <div>
@@ -26,7 +26,7 @@
             </div>
         </nav>
         </div>
-        <div class="bg-text" style="top: 15%;">
+        <div class="bg-text">
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-xl-12 col-lg-12 col-md-12"><h1> What We Do </h1></div>
@@ -43,8 +43,8 @@
                 </div>
             </div>
         </div>
-        <div>
-        <footer style="background-color: rgb(32, 31, 31);" class="bg-text3">
+        <div id="foot">
+        <footer style="background-color: rgb(32, 31, 31);">
             <div class="container-fluid">
                 <div style="color:white;" class="row"> 
                     <div class="col-xl-4 col-lg-4 col-md-4"> Information </div>
