added close button

--- a/index.html
+++ b/index.html
@@ -95,6 +95,9 @@
                 <div class="modal-body">
                     <img class="img-fluid" src="one.jpg" style="width: 465px; height: 600px;">
                 </div>
+                <div class="modal-footer"> 
+                    <a href="#" onclick="closeModalOne()"> Close </a>
+                </div>
               </div>
             </div>
         </div>
