fixed misc. stuff

--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
                         <span class="navColor"> Account </span>
                       </a>
                       <div class="dropdown-menu animate slideIn" aria-labelledby="navbarDropdown">
-                        <a style="color: black;" class="dropdown-item" href="#"> Sign Up </a>
+                        <a class="dropdown-item" href="#"> Sign Up </a>
                         <div class="dropdown-divider"></div>
-                        <a style="color: black;" class="dropdown-item" href="#"> Log In </a>
+                        <a class="dropdown-item" href="#"> Log In </a>
                       </div>
                     </li>
                 </ul>
@@ -86,25 +86,25 @@
         <div id="album" class="bg-text" style="margin-top: 100px;">
             <div class="container-fluid">
                 <div class="row">
-                    <div class="img-fluid"> 
+                    <div class="img-fluid mx-auto"> 
                         <img onclick="openModalOne()" style="cursor: pointer;" id="one" onmouseover="resizeOne()" onmouseout="resizeNormalOne()" src="images/one.jpg" width="260px" height="376px"> 
                     </div>
-                    <div class="img-fluid"> 
+                    <div class="img-fluid mx-auto"> 
                         <img onclick="openModalTwo()" style="cursor: pointer;" id="two" onmouseover="resizeTwo()" onmouseout="resizeNormalTwo()" src="images/two.jpg" width="260px" height="376px"> 
                     </div>
-                    <div class="img-fluid"> 
+                    <div class="img-fluid mx-auto"> 
                         <img onclick="openModalThree()" style="cursor: pointer;" id="three" onmouseover="resizeThree()" onmouseout="resizeNormalThree()" src="images/three.jpg" width="260px" height="376px"> 
                     </div>
-                    <div class="img-fluid"> 
+                    <div class="img-fluid mx-auto"> 
                         <img width="260px" height="376px" onclick="openModalFour()" style="cursor: pointer;" id="four" onmouseover="resizeFour()" onmouseout="resizeNormalFour()" src="images/four.jpg"> 
                     </div>
-                    <div class="img-fluid"> 
+                    <div class="img-fluid mx-auto"> 
                         <img width="260px" height="376px" onclick="openModalFive()" style="cursor: pointer;" id="five" onmouseover="resizeFive()" onmouseout="resizeNormalFive()" src="images/five.jpg"> 
                     </div>
-                    <div class="img-fluid"> 
+                    <div class="img-fluid mx-auto"> 
                         <img width="270px" height="376px" onclick="openModalSix()" style="cursor: pointer;" id="six" onmouseover="resizeSix()" onmouseout="resizeNormalSix()" src="images/six.jpg"> 
                     </div>
-                    <div class="img-fluid"> 
+                    <div class="img-fluid mx-auto"> 
                         <img width="270px" height="376px" onclick="openModalSeven()" style="cursor: pointer;" id="seven" onmouseover="resizeSeven()" onmouseout="resizeNormalSeven()" src="images/seven.jpg"> 
                     </div>
                 </div>
@@ -148,9 +148,9 @@
                     </div>
                     <div style="color:white; padding: 20px;" class="row"> 
                         <div class="col-xl-3 col-lg-3 col-md-3"><span class="text-warning">S</span>ervices:</div>
-                        <div class="col-xl-3 col-lg-3 col-md-3"><a href="#"><span class="text-warning">R</span>oom Design</a></div>
-                        <div class="col-xl-3 col-lg-3 col-md-3"><a href="#"><span class="text-warning">O</span>ffice Design</a></div>
-                        <div class="col-xl-3 col-lg-3 col-md-3"><a href="#"><span class="text-warning">P</span>roduct Design</a></div>
+                        <div class="col-xl-3 col-lg-3 col-md-3"><a class="linkService" href="#"><span class="text-warning">R</span>oom Design</a></div>
+                        <div class="col-xl-3 col-lg-3 col-md-3"><a class="linkService" href="#"><span class="text-warning">O</span>ffice Design</a></div>
+                        <div class="col-xl-3 col-lg-3 col-md-3"><a class="linkService" href="#"><span class="text-warning">P</span>roduct Design</a></div>
                     </div>
                     <div style="color:white; padding: 20px;" class="row"> 
                         <div class="col-xl-3 col-lg-3 col-md-3"><span class="text-warning">V</span>isit our store:</div>
