--- a/index.html
+++ b/index.html
@@ -137,25 +137,41 @@
         <div id="foot">
             <footer style="background-color: rgb(32, 31, 31);">
                 <div class="container-fluid">
-                    <div style="color:white; padding: 20px;" class="row"> 
-                        <div class="col-xl-3 col-lg-3 col-md-3"><span class="text-warning">C</span>ontact Us:</div>
-                        <div class="col-xl-3 col-lg-3 col-md-3"><span class="text-warning">B</span>y Phone: <br> 
-                                                                <span class="text-warning">+</span>359 88 2434155
+                    <div style="color:white; padding: 10px;" class="row"> 
+                        <div class="col-xl-4 col-lg-4 col-md-4"><span class="text-warning">C</span>ontact Us:</div>
+                        <div class="col-xl-4 col-lg-4 col-md-4"><span class="text-warning">S</span>ervices:</div>
+                        <div class="col-xl-4 col-lg-4 col-md-4"><span class="text-warning">S</span>ocial Medias:</div>
+                    </div>
+                    <div style="color:white; padding: 10px; font-size: 30px;" class="row"> 
+                        <div class="col-xl-4 col-lg-4 col-md-4"><span class="text-warning">B</span>y Phone: <br> 
+                            <span class="text-warning">+</span>359 88 2434155
                         </div>
-                        <div class="col-xl-3 col-lg-3 col-md-3"><span class="text-warning">B</span>y Email: <br> 
-                                                                <span class="text-warning">i</span>nsidedesign@gmail.com
+                        <div class="col-xl-4 col-lg-4 col-md-4"><a class="linkService" href="#"><span class="text-warning">R</span>oom Design</a></div>
+                        <div class="col-xl-4 col-lg-4 col-md-4">
+                            <span class="text-warning fa fa-twitter"></span> @insensedesign
                         </div>
                     </div>
-                    <div style="color:white; padding: 20px;" class="row"> 
-                        <div class="col-xl-3 col-lg-3 col-md-3"><span class="text-warning">S</span>ervices:</div>
-                        <div class="col-xl-3 col-lg-3 col-md-3"><a class="linkService" href="#"><span class="text-warning">R</span>oom Design</a></div>
-                        <div class="col-xl-3 col-lg-3 col-md-3"><a class="linkService" href="#"><span class="text-warning">O</span>ffice Design</a></div>
-                        <div class="col-xl-3 col-lg-3 col-md-3"><a class="linkService" href="#"><span class="text-warning">P</span>roduct Design</a></div>
+                    <div style="color:white; padding: 10px; font-size: 30px;" class="row"> 
+                        <div class="col-xl-4 col-lg-4 col-md-4"><span class="text-warning">B</span>y Email: <br> 
+                            <span class="text-warning">i</span>nsidedesign@gmail.com
+                        </div>
+                        <div class="col-xl-4 col-lg-4 col-md-4"><a class="linkService" href="#"><span class="text-warning">O</span>ffice Design</a></div>
+                        <div class="col-xl-4 col-lg-4 col-md-4">
+                            <span class="text-warning fa fa-facebook"></span> insensedesign <br>     
+                        </div>
                     </div>
-                    <div style="color:white; padding: 20px;" class="row"> 
-                        <div class="col-xl-3 col-lg-3 col-md-3"><span class="text-warning">V</span>isit our store:</div>
+                    <div style="color:white; padding: 10px; font-size: 30px;" class="row"> 
+                        <div class="col-xl-4 col-lg-4 col-md-4"> 
+                        </div>
+                        <div class="col-xl-4 col-lg-4 col-md-4"><a class="linkService" href="#"><span class="text-warning">P</span>roduct Design</a></div>
+                        <div class="col-xl-4 col-lg-4 col-md-4">
+                            <span class="text-warning fa fa-instagram"></span> insensedesign  
+                        </div>
                     </div>
-                    <div style="color:white; padding: 20px;" class="row"> 
+                    <div style="color:white; padding: 10px;" class="row"> 
+                        <div class="col-xl-4 col-lg-4 col-md-4"><span class="text-warning">V</span>isit our store:</div>
+                    </div>
+                    <div style="color:white; padding: 10px; font-size: 30px;" class="row"> 
                         <div class="col-xl-12 col-lg-12 col-md-12">
                             <div class="mapouter">
                                 <div class="gmap_canvas">
